--- a/Project_056/explore_schema.ipynb
+++ b/Project_056/explore_schema.ipynb
@@ -2,303 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "3fc3de03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pipeline import MongoDB_Connector\n",
-    "import os\n",
-    "from utils import flat_json_to_avro_schema, extract_schema_from_mongodb\n",
-    "import json\n",
-    "import fastavro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "546408b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Output folder\n",
-    "output_folder = \"data_dict\"\n",
-    "\n",
-    "avro_schema_path = os.path.join(output_folder, \"avro_schema.json\")\n",
-    "if os.path.exists(avro_schema_path):\n",
-    "    avro_schema = json.load(open(avro_schema_path))\n",
-    "else:\n",
-    "    # MongoDB connection\n",
-    "    mongo = MongoDB_Connector()\n",
-    "    mongo.conn_mongo()\n",
-    "    # Extract and save schema\n",
-    "    extract_schema_from_mongodb(mongo.mongo_base_collection, output_folder, explore_limit = 20_000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3710ab63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avro_schema = fastavro.parse_schema(avro_schema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "0e2284bb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-21 14:21 - INFO - Success in conn_mongo()\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
    "source": [
-    "mongo = MongoDB_Connector()\n",
-    "mongo.conn_mongo()"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from pipeline import MongoDB_Connector\n",
+    "import os\n",
+    "from utils import extract_schema_from_mongodb\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "afc0d748",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalize_record(record, schema):\n",
-    "    \"\"\"Convert MongoDB record to Avro-ready format, dropping unwanted fields.\"\"\"\n",
-    "    record = dict(record)\n",
-    "    record[\"_id\"] = str(record.get(\"_id\", \"\"))\n",
-    "\n",
-    "    # Ensure all schema fields exist\n",
-    "    schema_fields = {f[\"name\"] for f in schema[\"fields\"]}\n",
-    "    for field in schema_fields:\n",
-    "        if field not in record:\n",
-    "            record[field] = None\n",
-    "    return record\n",
-    "batch_data = []\n",
-    "for doc in mongo.mongo_base_collection.find(limit = 20_000):\n",
-    "    # batch_data.append(normalize_record(doc, avro_schema))\n",
-    "    batch_data.append(normalize_record(doc, avro_schema))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "d4569709",
+   "execution_count": 22,
+   "id": "546408b4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'_id': '5ed8cb2bc671fc36b74653ad',\n",
-       "  'time_stamp': 1591266092,\n",
-       "  'ip': '37.170.17.183',\n",
-       "  'user_agent': 'Mozilla/5.0 (iPhone; CPU iPhone OS 13_4_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1 Mobile/15E148 Safari/604.1',\n",
-       "  'resolution': '375x667',\n",
-       "  'user_id_db': '502567',\n",
-       "  'device_id': 'beb2cacb-20af-4f05-9c03-c98e54a1b71a',\n",
-       "  'api_version': '1.0',\n",
-       "  'store_id': '12',\n",
-       "  'local_time': '2020-06-04 12:21:27',\n",
-       "  'show_recommendation': 'false',\n",
-       "  'current_url': 'https://www.glamira.fr/glamira-pendant-viktor.html?alloy=yellow-375',\n",
-       "  'referrer_url': 'https://www.glamira.fr/men-s-necklaces/',\n",
-       "  'email_address': 'pereira.vivien@yahoo.fr',\n",
-       "  'recommendation': False,\n",
-       "  'utm_source': False,\n",
-       "  'utm_medium': False,\n",
-       "  'collection': 'view_product_detail',\n",
-       "  'product_id': '110474',\n",
-       "  'option': [{'option_label': 'alloy',\n",
-       "    'option_id': '332084',\n",
-       "    'value_label': '',\n",
-       "    'value_id': '3279318'},\n",
-       "   {'option_label': 'diamond',\n",
-       "    'option_id': '',\n",
-       "    'value_label': '',\n",
-       "    'value_id': ''}],\n",
-       "  'key_search': None,\n",
-       "  'viewing_product_id': None,\n",
-       "  'cat_id': None,\n",
-       "  'order_id': None,\n",
-       "  'currency': None,\n",
-       "  'collect_id': None,\n",
-       "  'price': None,\n",
-       "  'is_paypal': None,\n",
-       "  'recommendation_product_position': None,\n",
-       "  'cart_products': None,\n",
-       "  'recommendation_product_id': None,\n",
-       "  'recommendation_clicked_position': None},\n",
-       " {'_id': '5ed8cb2b4c9ffc36e828fabe',\n",
-       "  'time_stamp': 1591266092,\n",
-       "  'ip': '194.193.38.240',\n",
-       "  'user_agent': 'Mozilla/5.0 (Linux; Android 10; SM-N960F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.96 Mobile Safari/537.36',\n",
-       "  'resolution': '412x846',\n",
-       "  'user_id_db': '503390',\n",
-       "  'device_id': 'b2d1024d-a62e-480d-ade8-20cf7f618270',\n",
-       "  'api_version': '1.0',\n",
-       "  'store_id': '29',\n",
-       "  'local_time': '2020-06-04 8:21:27',\n",
-       "  'show_recommendation': 'false',\n",
-       "  'current_url': 'https://www.glamira.com.au/customcheckout/onepage/payment/',\n",
-       "  'referrer_url': 'https://www.glamira.com.au/customcheckout/customer/login/address/1/',\n",
-       "  'email_address': 'Kodyjaden.n@hotmail.com',\n",
-       "  'collection': 'checkout',\n",
-       "  'order_id': '',\n",
-       "  'cart_products': [{'product_id': 103324,\n",
-       "    'amount': 1,\n",
-       "    'option': [{'option_label': 'diamond',\n",
-       "      'option_id': 261151,\n",
-       "      'value_label': 'Swarovsky Cristall',\n",
-       "      'value_id': 2166253},\n",
-       "     {'option_label': 'alloy',\n",
-       "      'option_id': 261154,\n",
-       "      'value_label': 'Weißgold 585',\n",
-       "      'value_id': 2166328}]}],\n",
-       "  'key_search': None,\n",
-       "  'viewing_product_id': None,\n",
-       "  'cat_id': None,\n",
-       "  'currency': None,\n",
-       "  'collect_id': None,\n",
-       "  'option': None,\n",
-       "  'price': None,\n",
-       "  'is_paypal': None,\n",
-       "  'recommendation_product_position': None,\n",
-       "  'product_id': None,\n",
-       "  'recommendation': None,\n",
-       "  'recommendation_product_id': None,\n",
-       "  'recommendation_clicked_position': None,\n",
-       "  'utm_source': None,\n",
-       "  'utm_medium': None},\n",
-       " {'_id': '5ed8cb2cfeae1f377811165c',\n",
-       "  'time_stamp': 1591266092,\n",
-       "  'ip': '212.237.237.184',\n",
-       "  'user_agent': 'Mozilla/5.0 (Linux; Android 9; SM-A202F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.96 Mobile Safari/537.36',\n",
-       "  'resolution': '360x780',\n",
-       "  'user_id_db': '',\n",
-       "  'device_id': 'b2cf91cd-456b-4bca-a1a7-a73fac8f4038',\n",
-       "  'api_version': '1.0',\n",
-       "  'store_id': '8',\n",
-       "  'local_time': '2020-06-04 12:21:25',\n",
-       "  'show_recommendation': 'false',\n",
-       "  'current_url': 'https://www.glamira.es/alianzas/?gclid=CjwKCAjwt-L2BRA_EiwAacX32XIKXImV_rFgP1XrUgK-tjd9ibaONdePmEkZvIhJvkyD6y_2gbEAPxoCCEAQAvD_BwE',\n",
-       "  'referrer_url': 'https://www.google.com/',\n",
-       "  'email_address': '',\n",
-       "  'collection': 'view_listing_page',\n",
-       "  'option': {'alloy': '', 'diamond': '', 'shapediamond': ''},\n",
-       "  'cat_id': None,\n",
-       "  'collect_id': '',\n",
-       "  'key_search': None,\n",
-       "  'viewing_product_id': None,\n",
-       "  'order_id': None,\n",
-       "  'currency': None,\n",
-       "  'price': None,\n",
-       "  'is_paypal': None,\n",
-       "  'recommendation_product_position': None,\n",
-       "  'product_id': None,\n",
-       "  'cart_products': None,\n",
-       "  'recommendation': None,\n",
-       "  'recommendation_product_id': None,\n",
-       "  'recommendation_clicked_position': None,\n",
-       "  'utm_source': None,\n",
-       "  'utm_medium': None},\n",
-       " {'_id': '5ed8cb2a56b3dd3742261b8c',\n",
-       "  'time_stamp': 1591266091,\n",
-       "  'ip': '121.200.6.91',\n",
-       "  'user_agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_4) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Safari/605.1.15',\n",
-       "  'resolution': '834x1112',\n",
-       "  'user_id_db': '',\n",
-       "  'device_id': '6071b84f-dba6-429e-8b6c-11baa0126090',\n",
-       "  'api_version': '1.0',\n",
-       "  'store_id': '29',\n",
-       "  'local_time': '2020-06-04 8:20:4',\n",
-       "  'show_recommendation': None,\n",
-       "  'current_url': 'https://www.glamira.com.au/glamira-diamonds-ohrstecker-louisa-skug100735.html?alloy=white-585&diamond=diamond-sapphire&gclid=EAIaIQobChMIsKGy3_fn6QIVSA4rCh3xvQ1uEAQYASABEgIYu_D_BwE',\n",
-       "  'referrer_url': '',\n",
-       "  'email_address': '',\n",
-       "  'collection': 'select_product_option_quality',\n",
-       "  'product_id': '85796',\n",
-       "  'option': [{'option_label': 'stone/diamonds',\n",
-       "    'option_id': '57695',\n",
-       "    'value_label': 'diamond-Brillant',\n",
-       "    'value_id': '308213',\n",
-       "    'quality': 'A',\n",
-       "    'quality_label': 'I'}],\n",
-       "  'key_search': None,\n",
-       "  'viewing_product_id': None,\n",
-       "  'cat_id': None,\n",
-       "  'order_id': None,\n",
-       "  'currency': None,\n",
-       "  'collect_id': None,\n",
-       "  'price': None,\n",
-       "  'is_paypal': None,\n",
-       "  'recommendation_product_position': None,\n",
-       "  'cart_products': None,\n",
-       "  'recommendation': None,\n",
-       "  'recommendation_product_id': None,\n",
-       "  'recommendation_clicked_position': None,\n",
-       "  'utm_source': None,\n",
-       "  'utm_medium': None},\n",
-       " {'_id': '5ed8cb2a796d133700cefa27',\n",
-       "  'time_stamp': 1591266091,\n",
-       "  'ip': '24.133.169.84',\n",
-       "  'user_agent': 'Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Safari/537.36',\n",
-       "  'resolution': '1680x1050',\n",
-       "  'user_id_db': '',\n",
-       "  'device_id': '8224d228-4d84-46aa-b6c7-888df1f35af3',\n",
-       "  'api_version': '1.0',\n",
-       "  'store_id': '66',\n",
-       "  'local_time': '2020-06-04 1:21:27',\n",
-       "  'show_recommendation': 'false',\n",
-       "  'current_url': 'https://www.glamira.bg/',\n",
-       "  'referrer_url': '',\n",
-       "  'email_address': '',\n",
-       "  'collection': 'view_home_page',\n",
-       "  'key_search': None,\n",
-       "  'viewing_product_id': None,\n",
-       "  'cat_id': None,\n",
-       "  'order_id': None,\n",
-       "  'currency': None,\n",
-       "  'collect_id': None,\n",
-       "  'option': None,\n",
-       "  'price': None,\n",
-       "  'is_paypal': None,\n",
-       "  'recommendation_product_position': None,\n",
-       "  'product_id': None,\n",
-       "  'cart_products': None,\n",
-       "  'recommendation': None,\n",
-       "  'recommendation_product_id': None,\n",
-       "  'recommendation_clicked_position': None,\n",
-       "  'utm_source': None,\n",
-       "  'utm_medium': None}]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-06-24 01:00 - INFO - Success in conn_mongo()\n",
+      "\n",
+      "🔍 Analyzing: add_to_cart_action\n",
+      "✅ Saved: add_to_cart_action_schema.json (24 fields)\n",
+      "\n",
+      "🔍 Analyzing: back_to_product_action\n",
+      "✅ Saved: back_to_product_action_schema.json (16 fields)\n",
+      "\n",
+      "🔍 Analyzing: checkout\n",
+      "✅ Saved: checkout_schema.json (24 fields)\n",
+      "\n",
+      "🔍 Analyzing: checkout_success\n",
+      "✅ Saved: checkout_success_schema.json (26 fields)\n",
+      "\n",
+      "🔍 Analyzing: landing_page_recommendation_clicked\n",
+      "✅ Saved: landing_page_recommendation_clicked_schema.json (17 fields)\n",
+      "\n",
+      "🔍 Analyzing: landing_page_recommendation_noticed\n",
+      "✅ Saved: landing_page_recommendation_noticed_schema.json (15 fields)\n",
+      "\n",
+      "🔍 Analyzing: landing_page_recommendation_visible\n",
+      "✅ Saved: landing_page_recommendation_visible_schema.json (15 fields)\n",
+      "\n",
+      "🔍 Analyzing: listing_page_recommendation_clicked\n",
+      "✅ Saved: listing_page_recommendation_clicked_schema.json (23 fields)\n",
+      "\n",
+      "🔍 Analyzing: listing_page_recommendation_noticed\n",
+      "✅ Saved: listing_page_recommendation_noticed_schema.json (21 fields)\n",
+      "\n",
+      "🔍 Analyzing: listing_page_recommendation_visible\n",
+      "✅ Saved: listing_page_recommendation_visible_schema.json (21 fields)\n",
+      "\n",
+      "🔍 Analyzing: product_detail_recommendation_clicked\n",
+      "✅ Saved: product_detail_recommendation_clicked_schema.json (18 fields)\n",
+      "\n",
+      "🔍 Analyzing: product_detail_recommendation_noticed\n",
+      "✅ Saved: product_detail_recommendation_noticed_schema.json (16 fields)\n",
+      "\n",
+      "🔍 Analyzing: product_detail_recommendation_visible\n",
+      "✅ Saved: product_detail_recommendation_visible_schema.json (16 fields)\n",
+      "\n",
+      "🔍 Analyzing: product_view_all_recommend_clicked\n",
+      "✅ Saved: product_view_all_recommend_clicked_schema.json (18 fields)\n",
+      "\n",
+      "🔍 Analyzing: search_box_action\n",
+      "✅ Saved: search_box_action_schema.json (16 fields)\n",
+      "\n",
+      "🔍 Analyzing: select_product_option\n",
+      "✅ Saved: select_product_option_schema.json (21 fields)\n",
+      "\n",
+      "🔍 Analyzing: select_product_option_quality\n",
+      "✅ Saved: select_product_option_quality_schema.json (23 fields)\n",
+      "\n",
+      "🔍 Analyzing: sorting_relevance_click_action\n",
+      "✅ Saved: sorting_relevance_click_action_schema.json (17 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_all_recommend\n",
+      "✅ Saved: view_all_recommend_schema.json (25 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_home_page\n",
+      "✅ Saved: view_home_page_schema.json (15 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_landing_page\n",
+      "✅ Saved: view_landing_page_schema.json (15 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_listing_page\n",
+      "✅ Saved: view_listing_page_schema.json (21 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_my_account\n",
+      "✅ Saved: view_my_account_schema.json (15 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_product_detail\n",
+      "✅ Saved: view_product_detail_schema.json (24 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_shopping_cart\n",
+      "✅ Saved: view_shopping_cart_schema.json (22 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_sorting_relevance\n",
+      "✅ Saved: view_sorting_relevance_schema.json (19 fields)\n",
+      "\n",
+      "🔍 Analyzing: view_static_page\n",
+      "✅ Saved: view_static_page_schema.json (15 fields)\n",
+      "\n",
+      "📦 Combined schema saved to 'data_dict/combined_schema.json' with 57 unique fields.\n"
+     ]
     }
    ],
    "source": [
-    "batch_data[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "63521b68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fastavro\n",
-    "with open('test.avro', \"wb\") as f:\n",
-    "    fastavro.writer(f, avro_schema, batch_data)"
+    "# Output folder\n",
+    "output_folder = \"data_dict\"\n",
+    "\n",
+    "mongo = MongoDB_Connector()\n",
+    "mongo.conn_mongo()\n",
+    "\n",
+    "extract_schema_from_mongodb(mongo.mongo_base_collection, output_folder, explore_limit = 20_000)"
    ]
   }
  ],
